# billingmanagesystem

./: .gitignore  CMakeLists.txt  README.md  WORKING_METHOD.md  compile.bat  run.bat  test_compile.bat
data/: account.db
include/: accountdatabase.h  admin.h  adminservice.h  billingdatabase.h  database.h  financedatabase.h  financeservice.h  global.h  loginoutdata.h  menu.h  model.h  model.hpp  search.h  service.h  utils.hpp
src/: Main.cpp  accountservice.cpp  admin.cpp  billingstandard.cpp  database.cpp  financeservice.cpp  loginout.cpp  logsearch.cpp  menu.cpp  service.cpp  tool.cpp
src/headfile/: accountservice.h  billingstandard.h  global.h  loginout.h  logsearch.h  model.hpp  tool.h
src/services/: accountdatabase.cpp  accountservice.cpp  adminservice.cpp  billingdatabase.cpp  billingstandard.cpp  financedatabase.cpp  financeservice.cpp  loginout.cpp  loginoutdata.cpp  logsearch.cpp
